# datalog-aa

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  DatalogAAPass.cpp  DatalogAAPass.h  DatalogDSL.h  DatalogIR.cpp  DatalogIR.h  FactGenerator.cpp  FactGenerator.h  ValuePrinter.cpp  ValuePrinter.h  Z3Backend.cpp  Z3Backend.h
src/Analysis/: Andersen.datalog  Common.datalog  ContextInsensitive.datalog  FactGenerator.cpp  FactGenerator.h  Objects.datalog  Variables.datalog
src/Analysis/Specifications/: Andersen.datalog  Common.datalog  Relations.datalog
src/Analysis/Specs/: Andersen.datalog  Common.datalog  Relations.datalog
src/Specifications/: Path.datalog
tests/: CMakeLists.txt  lit.cfg  test.c
tests/precision/andersen/: call-1.ll
tests/safety/: call-1.ll  constant-1.ll  constants-1.ll  global-1.ll  inttoptr-1.ll  malloc-1.ll  phi-1.ll  struct-1.ll  unknown-1.ll
tests/stage-1/: simple-1.ll  unknown-1.ll
